
5.2a2 -> 5.2a3:
    - jbj: rpmz: handle gzip/bzip2/xz/lzma compression in 1 executable.
    - proyvind: create %mipsel and also add more generations to the mips macros. 
    - jbj: fix: avoid the assertion failure w LZMA lzdio by upgrading to XZ.
    - proyvind: add initial support for detecting automatically detecting
	architecture through libcpuinfo.
    - jbj: stub-in /usr/lib/rpm/helpers/makeshlibs proof-of-concept.
    - proyvind: add %mips & %mipsx macros for mips archictecture.
    - jbj: add rpmdsNSType() to -lrpm loader map.
    - jbj: rpmtsOrder: enable parentdir/linkto ordering relations.
    - jbj: rpmrepo: initialize Packages/Sources markup.
    - jbj: rpmrepo: initialize ".yaml" markup, add pre/post oneshot vectors.
    - jbj: rpmrepo: compile in deb_{Packages,Sources} queryformats.
    - jbj: rpmrepo: compile in wnh_{primary,filelists,other}_yaml queryformats.
    - jbj: stub in deb:{Packages,Sources} queryformt templates.
    - jbj: install/use deb:control queryformat. todo++
    - jbj: install/use deb:{md5sums,preinst,postinst,prerm,postrm} queryformats.
    - jbj: install/use wnh:{primary,filelists,other}.yaml queryformats.
    - jbj: attempt --yum:other.yaml markup definition (gud enuf for now).
    - jbj: finish up yum:{primary,filelists}.yaml header extension tags.
    - jbj: rpmrepo: compile in queryformat strings.
    - jbj: add doublequotes around queryformats for #include use in rpmrepo.c.
    - jbj: blueprint/use yum:{primary,filelists,other}.sqlite queryformats.
    - jbj: blueprint/use yum:{primary,filelists,other}.xml queryformats.
    - jbj: install yum:{primary,filelists,other}.xml queryformats.
    - jbj: use poptReadFile with retrofit for popt < 1.15.
    - jbj: rude & crude backing store for --queryformat templates.
    - proyvind: xzdio: accept compression level 0 - 9 (new '0' = former '1' etc.).
    - proyvind: don't wipe out $DOCDIR when using %doc as it will wipe out any